<?xml version="1.0"?>
<package format="3">
  <name>manipulator_control</name>
  <version>0.1.0</version>
  <description>Keyboard teleop and control for RRRR manipulator</description>
  <maintainer email="grupo9@usp.br">Grupo 9</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
